--- a/app/src/main/res/layout/activity_paper_search.xml
+++ b/app/src/main/res/layout/activity_paper_search.xml
@@ -1,70 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:background="@color/base"
+        android:orientation="vertical"
         >
 
-    <android.support.v7.widget.CardView
+    <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/spacing_large"
-            android:layout_marginStart="@dimen/spacing_large"
-            android:layout_marginTop="@dimen/spacing_large"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
             >
 
-        <LinearLayout
+        <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/spacing_large"
+                android:layout_marginStart="@dimen/spacing_large"
+                android:layout_marginTop="@dimen/spacing_large"
                 >
 
-            <android.support.v7.widget.AppCompatAutoCompleteTextView
-                    android:id="@+id/queryEditText"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@android:color/transparent"
-                    android:inputType="text"
-                    android:maxLines="1"
-                    android:padding="@dimen/spacing_medium"
-                    android:paddingEnd="@dimen/spacing_medium"
-                    android:paddingStart="@dimen/spacing_large"
-                    />
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    >
 
-            <View
-                    android:layout_width="1px"
-                    android:layout_height="match_parent"
-                    android:layout_marginBottom="@dimen/spacing_small"
-                    android:layout_marginTop="@dimen/spacing_small"
-                    android:background="@color/text_hint"
-                    />
+                <android.support.v7.widget.AppCompatAutoCompleteTextView
+                        android:id="@+id/queryEditText"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@android:color/transparent"
+                        android:inputType="text"
+                        android:maxLines="1"
+                        android:padding="@dimen/spacing_medium"
+                        android:paddingEnd="@dimen/spacing_medium"
+                        android:paddingStart="@dimen/spacing_large"
+                        />
 
-            <com.mikepenz.iconics.view.IconicsTextView
-                    android:id="@+id/searchButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:background="?android:attr/selectableItemBackground"
-                    android:gravity="center"
-                    android:paddingBottom="@dimen/spacing_medium"
-                    android:paddingEnd="@dimen/spacing_large"
-                    android:paddingStart="@dimen/spacing_large"
-                    android:paddingTop="@dimen/spacing_medium"
-                    android:text="{gmd_settings_voice}"
-                    android:textSize="@dimen/icon_size_medium"
-                    />
-        </LinearLayout>
+                <View
+                        android:layout_width="1px"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="@dimen/spacing_small"
+                        android:layout_marginTop="@dimen/spacing_small"
+                        android:background="@color/text_hint"
+                        />
+
+                <com.mikepenz.iconics.view.IconicsTextView
+                        android:id="@+id/voiceSearchButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:background="?android:attr/selectableItemBackground"
+                        android:gravity="center"
+                        android:paddingBottom="@dimen/spacing_medium"
+                        android:paddingEnd="@dimen/spacing_large"
+                        android:paddingStart="@dimen/spacing_large"
+                        android:paddingTop="@dimen/spacing_medium"
+                        android:text="{gmd_settings_voice}"
+                        android:textSize="@dimen/icon_size_medium"
+                        />
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/searchResultListView"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:clipToPadding="false"
+                android:padding="@dimen/spacing_large"
+                />
+    </LinearLayout>
+
+    <android.support.v7.widget.CardView
+            android:id="@+id/filterButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center_horizontal"
+            android:layout_marginBottom="@dimen/spacing_xxlarge"
+            card_view:cardCornerRadius="20dp"
+            card_view:cardElevation="6dp"
+            >
+
+        <com.mikepenz.iconics.view.IconicsTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="@dimen/spacing_large"
+                android:paddingEnd="@dimen/spacing_xxlarge"
+                android:paddingStart="@dimen/spacing_xxlarge"
+                android:paddingTop="@dimen/spacing_large"
+                android:text="FILTERS {gmd_filter_list}"
+                android:textColor="@color/text_primary"
+                android:textStyle="bold"
+                />
     </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.RecyclerView
-            android:id="@+id/searchResultListView"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:clipToPadding="false"
-            android:padding="@dimen/spacing_large"
-            />
-</LinearLayout>
-
+</FrameLayout>
