--- a/app/src/main/res/layout/activity_paper_view.xml
+++ b/app/src/main/res/layout/activity_paper_view.xml
@@ -74,6 +74,7 @@
                             android:animateLayoutChanges="true"
                             android:ellipsize="end"
                             android:maxLines="1"
+                            android:paddingEnd="@dimen/spacing_large"
                             android:textSize="@dimen/text_size_large"
                             android:textStyle="bold"
                             />
@@ -92,62 +93,94 @@
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:clipToPadding="false"
                 android:orientation="vertical"
-                android:padding="@dimen/spacing_xxlarge"
                 >
 
-            <TextView
-                    android:id="@+id/authorsTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="@dimen/spacing_xlarge"
-                    android:textSize="@dimen/text_size_small"
-                    />
-
-            <TextView
-                    android:id="@+id/publishedAtTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="@dimen/spacing_small"
-                    android:textSize="@dimen/text_size_small"
-                    />
-
-            <Button
-                    android:id="@+id/actionButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="@dimen/spacing_large"
-                    android:text="@string/button_download"
-                    />
-
-            <TextView
-                    android:id="@+id/summaryTextView"
+            <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/spacing_large"
-                    android:justificationMode="inter_word"
-                    android:textSize="@dimen/text_size_medium"
-                    tools:targetApi="o"
-                    />
+                    android:orientation="vertical"
+                    android:padding="@dimen/spacing_xxlarge"
+                    >
 
-            <android.support.v7.widget.RecyclerView
-                    android:id="@+id/categoryListView"
+                <TextView
+                        android:id="@+id/authorsTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="@dimen/spacing_xlarge"
+                        android:textSize="@dimen/text_size_small"
+                        />
+
+                <TextView
+                        android:id="@+id/publishedAtTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="@dimen/spacing_small"
+                        android:textSize="@dimen/text_size_small"
+                        />
+
+                <Button
+                        android:id="@+id/actionButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="@dimen/spacing_large"
+                        android:text="@string/button_download"
+                        />
+
+                <TextView
+                        android:id="@+id/summaryTextView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/spacing_large"
+                        android:justificationMode="inter_word"
+                        android:textSize="@dimen/text_size_medium"
+                        tools:targetApi="o"
+                        />
+            </LinearLayout>
+
+            <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/spacing_xlarge"
-                    />
+                    android:background="@color/base"
+                    android:orientation="vertical"
+                    android:padding="@dimen/spacing_xxlarge"
+                    >
 
-            <TextView
-                    android:id="@+id/similarPapersTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/spacing_xlarge"
-                    android:textSize="@dimen/text_size_medium"
-                    />
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/category"
+                        android:textSize="@dimen/text_size_large"
+                        android:textStyle="bold"
+                        />
+
+                <android.support.v7.widget.RecyclerView
+                        android:id="@+id/categoryListView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/spacing_medium"
+                        />
+
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/spacing_xlarge"
+                        android:text="@string/similar_papers"
+                        android:textSize="@dimen/text_size_large"
+                        android:textStyle="bold"
+                        />
+
+                <android.support.v7.widget.RecyclerView
+                        android:id="@+id/similarPaperListView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/spacing_medium"
+                        />
+            </LinearLayout>
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 </android.support.design.widget.CoordinatorLayout>
